# memoryManager

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  main.c  memoryManager.h.gch
source/: main.c  memoryManager.c  memoryManager.h  test.c  test.cpp
